[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
